--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -65,11 +65,11 @@
                                 @{ var isExternalLogVisible = Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote) == string.Empty; }
                                 @if (isExternalLogVisible)
                                 {
-                                    <td class="wordbreak" style="width: 25%; max-width: 300px">
+                                    <td class="wordbreak" style="width: 25%; max-width: 300px; overflow-x: auto;">
                                         <a>
                                             @*href="@GetLogLink(r)"*@
                                             <div style="display:block;">
-                                                <div style="display: inline;">
+                                                <div style="display: inline;" name="divTextExternal">
                                                     @Html.Raw(r.TextExternal.HTMLToTableCell())
                                                 </div>
                                             </div>
@@ -79,13 +79,13 @@
                                 }
 
                                 @* Internal Log note cell: *@
-                                <td class="wordbreak" style="@(isExternalLogVisible ? "width: 25%; max-width: 300px" : "width: 40%; max-width: 300px")">
+                                <td class="wordbreak" style="@(isExternalLogVisible ? "width: 25%; max-width: 300px;overflow-x:auto;" : "width: 40%; max-width: 300px;overflow-x:auto;")">
                                     @if (Model.CaseInternalLogAccess)
                                     {
                                         <a>
                                             @*href="@GetLogLink(r)"*@
                                             <div style="display:block;">
-                                                <div style="display: inline;">
+                                                <div style="display: inline;" name="divTextInternal">
                                                     @Html.Raw(r.TextInternal.HTMLToTableCell())
                                                 </div>
                                             </div>
@@ -100,7 +100,7 @@
                                 </td>
 
                                 @* Log Files: *@
-                                <td class="wordbreak" style="max-width: 150px">
+                                <td class="wordbreak" style="max-width: 150px" name="divLogNoteFiles">
                                     @Html.Partial("_LogNoteFiles", Model.CreateFilesViewModel(r))
                                 </td>
                             </tr>
