--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -65,7 +65,7 @@
                                 @{ var isExternalLogVisible = Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote) == string.Empty; }
                                 @if (isExternalLogVisible)
                                 {
-                                    <td class="wordbreak" style="width: 25%; max-width: 300px; overflow-x: auto;">
+                                    <td class="wordbreak" style="width: 25%; max-width: 300px;">
                                         <a>
                                             @*href="@GetLogLink(r)"*@
                                             <div style="display:block;">
@@ -79,7 +79,7 @@
                                 }
 
                                 @* Internal Log note cell: *@
-                                <td class="wordbreak" style="@(isExternalLogVisible ? "width: 25%; max-width: 300px;overflow-x:auto;" : "width: 40%; max-width: 300px;overflow-x:auto;")">
+                                <td class="wordbreak" style="@(isExternalLogVisible ? "width: 25%; max-width: 300px;" : "width: 40%; max-width: 300px;")">
                                     @if (Model.CaseInternalLogAccess)
                                     {
                                         <a>
