264510 - Bug - Lång lista med avslutsorsaker vid massredigering

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_BulkCaseEdit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_BulkCaseEdit.cshtml
@@ -274,7 +274,7 @@
                                 <button id="btnFinishingTypeLst" class="btn dropdown-toggle" data-toggle="dropdown" @disabled>
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu subddMenu parentddMenu">
                                     <li><a href="#">@Translation.Get("--")</a></li>
                                     @Html.FinishingCauseDropdownButtonString(Model.finishingCauses)
                                 </ul>
