#271813 - Task - Case - Rich text formating - Scroll Description

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -4342,7 +4342,9 @@ div.chosen-container.chosen-container-single.error {
     left: 50% !important;
     bottom: auto !important;
 }
-
+.note-editable {
+    overflow-x: hidden !important;
+}
 .note-input{
     padding: 0 !important
 }
