#271813 - Task - Case - Rich text formating - Selfservice lognotes

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
@@ -1,5 +1,6 @@
 ﻿@using DH.Helpdesk.SelfService.Models.Case
 @using DH.Helpdesk.Web.Common.Extensions
+@using DH.Helpdesk.SelfService.Infrastructure.Helpers;
 @model CaseLogsModel
 
 @functions
@@ -38,8 +39,8 @@
             <div class="list-arrow"></div>
             <p>@GetLogUser(logModel) | @Html.DisplayFor(l => regDate)</p>
             @*<p>@Html.Raw(FormatLogText(logItem))</p>*@
-            <p>@Html.Raw(FormatLogText(logModel))</p>
-            <p>
+            <div style="overflow-x: auto;">
+                @Html.Raw(WebMethodsExtensions.HTMLToTableCell(GetLogText(logModel)))
                 @if (logModel.Files != null)
                 {
                     foreach (var f in logModel.Files)
@@ -51,7 +52,7 @@
                         <br />
                     }
                 }
-            </p>
+            </div>
         </div>
     }
 }
