#271813 - Task - Case - Rich text formating - Selfservice summernote javascript error

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseReceipt.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseReceipt.cshtml
@@ -623,12 +623,6 @@
             disableResizeEditor: false,
             height: 150,
             callbacks: {
-                onChange: function (contents, $editable) {
-
-                    //$('.summernotedesc').val($('.summernotedesc').summernote('isEmpty') ? "" : contents);
-
-                    //validator.element($('.summernotedesc'));
-                },
                 onPaste: function (e) {
                     var bufferText = ((e.originalEvent || e).clipboardData || window.clipboardData).getData('Text');
                     e.preventDefault();
@@ -637,12 +631,14 @@
             }
         }
 
-
-
     //Init summernote
     $(document).ready(function () {
 
         $('.summernotecomment').summernote(summerNoteCommentConfig)
+        $('form').each(function () {
+            if ($(this).data('validator'))
+                $(this).data('validator').settings.ignore = ".note-editor *";
+        });
 
     });
 
