#252204 - Task - Case - Inform administrator - setting to NOT send as standard

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Customer/_Customer.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Customer/_Customer.cshtml
@@ -231,7 +231,7 @@
         </tr>
         <tr>
             <td>
-                @Translation.Get("Informera HandläggareX som standard")?
+                @Translation.Get("Informera Handläggare som standard")?
             </td>
             <td>
                 @Html.DropDownListFor(model => model.Customer.CommunicateWithPerformer, Model.CWPSelect)
