#271813 - Task - Case - Rich text formating - Description Edit button

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -4352,3 +4352,12 @@ div.chosen-container.chosen-container-single.error {
 .note-editor.note-frame {
     margin-bottom: 5px !important;
 }
+
+.showDescriptionFlat {
+    width: 648px;
+    height: 566px;
+    overflow-x: auto !important;
+    overflow-y: scroll;
+    border: 1px solid #cccccc;
+    border-radius: 3px;
+}
