#Ändrat Redigera till Ändra i _Input (HD)

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1447,7 +1447,7 @@
                                                         <span id="caseDescriptionEdit"
                                                               rel="tooltip"
                                                               class="icon-edit"
-                                                              title="@Translation.GetCoreTextTranslation("Redigera")"></span>
+                                                              title="@Translation.GetCoreTextTranslation("Ändra")"></span>
                                                         <div id="showDescriptionEdit" style="display:none">
                                                             <div class="summernote-desc-flex-container" style="align-items:center">
 
